--- a/skin.estuary.extended/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.extended/language/resource.language.en_gb/strings.po
@@ -440,7 +440,7 @@ msgstr ""
 
 #: /xml/LoginScreen.xml
 msgctxt "#31098"
-msgid "Select your Kodi user profile[CR]to login and continue"
+msgid "Select your CoreELEC user profile[CR]to login and continue"
 msgstr ""
 
 #. viewtype name
@@ -520,10 +520,7 @@ msgctxt "#31114"
 msgid "Search YouTube"
 msgstr ""
 
-#: /xml/VideoOSD.xml
-msgctxt "#31115"
-msgid "Toggle subtitle"
-msgstr ""
+#empty string with id 31115
 
 #: /xml/Includes_Home.xml
 msgctxt "#31116"
@@ -542,7 +539,7 @@ msgstr ""
 
 #: /xml/Home.xml
 msgctxt "#31119"
-msgid "You do not have any add-ons installed yet. Visit our add-on browser to browse through our collection and improve your Kodi experience."
+msgid "You do not have any add-ons installed yet. Visit our add-on browser to browse through our collection and improve your CoreELEC experience."
 msgstr ""
 
 #: /xml/Home.xml
@@ -794,4 +791,14 @@ msgstr ""
 #: /xml/Variables.xml
 msgctxt "#31169"
 msgid "Artwork related settings."
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#32100"
+msgid "Display mode"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#32101"
+msgid "EOTF & Gamut"
 msgstr ""
